--- a/src/components/sectionTwo/css/styles.module.css
+++ b/src/components/sectionTwo/css/styles.module.css
@@ -1,11 +1,37 @@
-.app{
-    background-color: #282c34;
-    min-height: 100vh;
-    min-width: 300px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
+.header {
+  height: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: space-between; */
+  background-color: #15171c;
+}
+.header > a {
+  margin: 0 1rem;
+  color: white;
+  text-decoration: none;
+}
+.header > nav {
+  /* width: 600px; */
+  height: 100%;
+}
+.header ul {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.app {
+  background-color: #282c34;
+  min-height: 100vh;
+  min-width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+.footer {
+  height: 50px;
 }
