--- a/src/components/sectionTwo/css/styles.module.css
+++ b/src/components/sectionTwo/css/styles.module.css
@@ -46,19 +46,22 @@
   padding: 1.25rem;
   text-align: left;
 }
-.side__nav a {
+.side__nav li, a {
+  width: 100%;
   color: white;
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 600;
   letter-spacing: 0.1rem;
+  /* font-size: calc(10px + 1vmin); */
+  margin: 0.5rem 0;
 }
 .side__nav a:active {
   border: 1px solid #6495ed;
 }
-.side__nav li {
+/* .side__nav li {
   margin: 0.5rem 0;
-}
+} */
 .vertical__hr {
   height: calc(100vh - 2rem);
   margin: 1rem 0;
