메모 내용 추가

--- a/src/components/sectionTwo/css/styles.module.css
+++ b/src/components/sectionTwo/css/styles.module.css
@@ -31,7 +31,7 @@
   width: 100%;
   min-width: 300px;
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   color: white;
 }
 /* .weather__app {
@@ -60,7 +60,7 @@
   margin: 0.5rem 0;
 }
 .side__nav a:active {
-  border: 1px solid #6495ed;
+  color: #6495ed;
 }
 
 .vertical__hr {
