--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App{
+.App {
   position: relative;
 }
 .App-link {
@@ -57,7 +57,10 @@ details[open] summary:after {
   color: white;
   /* text-decoration: none; */
 }
-.img-404{
+.img-404 {
   width: 300px;
   height: 300px;
+}
+.a-center {
+  text-align: center;
 }
