--- a/src/components/section2/css/styles.module.css
+++ b/src/components/section2/css/styles.module.css
@@ -46,11 +46,12 @@
   padding: 1.25rem;
   text-align: left;
 }
-.side__nav{
+.side__nav {
   width: 100%;
 }
-.side__nav li, a {
-  width: 100%;
+.side__nav li,
+a {
+  /* width: 100%; */
   color: white;
   text-decoration: none;
   text-transform: uppercase;
