--- a/src/index.css
+++ b/src/index.css
@@ -58,3 +58,12 @@ code {
 .side-nav:hover {
   color: darkred;
 }
+.m-0 {
+  margin: 0;
+}
+.m-05 {
+  margin: 0.5rem;
+}
+.mt-1 {
+  margin-top: 1rem;
+}
